<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_secret"
        android:icon="@drawable/ic_action_new_secret"
        android:showAsAction="always"
        android:title="@string/action_new_secret"/>
    <item
        android:id="@+id/action_notification"
        android:actionLayout="@layout/notification_count_view"
        android:showAsAction="always"
        android:title="@string/action_notification"/>
    <item
        android:id="@+id/action_chat"
        android:actionLayout="@layout/chat_count_view"
        android:showAsAction="always"
        android:title="@string/action_chat"/>
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_more"
        android:showAsAction="always"
        android:title="@string/action_more">
        <menu>
            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"/>
            <item
                android:id="@+id/action_fresh"
                android:title="@string/action_fresh"/>
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"/>
        </menu>
    </item>
    
</menu>